# fastapi-backend-course

./: pyproject.toml
.github/workflows/: ci.yml
